--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,14 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:id="@+id/fragmentLogin"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.LoginFragment">
+    tools:context=".view.fragment.LoginFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorBackground">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:layout_margin="50dp"
+        android:layout_gravity="center"
+        android:src="@drawable/fit_app_ico"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
 
-</FrameLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        app:boxStrokeWidth="2dp"
+        style="@style/TextInputLayout"
+        android:layout_margin="10dp"
+        app:hintTextColor="@color/borderColor"
+        android:id="@+id/textInputEmail"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            style="@style/TextInputEditText"
+            android:id="@+id/textInputEmailEditText"
+            android:textColor="@color/borderColor"
+            android:textColorHint="@color/borderColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="Email"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        app:boxStrokeWidth="2dp"
+        style="@style/TextInputLayout"
+        android:layout_margin="10dp"
+        android:id="@+id/textInputPassword"
+        android:layout_width="300dp"
+        app:hintTextColor="@color/borderColor"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            style="@style/TextInputEditText"
+            android:id="@+id/textInputPasswordEditText"
+            android:layout_width="match_parent"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:textColor="@color/borderColor"
+            android:textColorHint="@color/borderColor"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:text="sign in"
+        android:textColor="@color/colorBackground"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:id="@+id/loginButton"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"/>
+
+</LinearLayout>
