--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -20,6 +20,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
+                    android:onClick="navigateToSettings"
                     android:id="@+id/settings"
                     android:src="@drawable/ic_settings"
                     android:layout_width="wrap_content"
