--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,8 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:gravity="center"
+    android:layout_margin="10dp"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.SettingsFragment">
+    tools:context=".view.fragment.SettingsFragment"
+    android:background="@color/colorBackground">
 
-</FrameLayout>
+    <LinearLayout
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/shape_button"
+        android:orientation="horizontal"
+        android:layout_width="200dp"
+        android:layout_height="50dp">
+
+        <TextView
+            android:text="Load image"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Switch
+            android:id="@+id/imageSwitch"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/logOut"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/shape_button"
+        android:orientation="horizontal"
+        android:layout_width="200dp"
+        android:layout_height="50dp">
+
+        <TextView
+            android:text="Log out"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+</LinearLayout>
