--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"/>
 
         <Switch
+            android:checked="true"
             android:id="@+id/imageSwitch"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
