--- a/app/src/main/res/layout/item_lay.xml
+++ b/app/src/main/res/layout/item_lay.xml
@@ -6,7 +6,7 @@
     android:layout_marginRight="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent">
 
     <ImageView
