--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,31 +19,8 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/login_navigation"/>
 
-    <LinearLayout
-        android:alpha="0"
+    <include
         android:id="@+id/loadLay"
-        android:layout_margin="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ProgressBar
-            android:layout_gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-
-        <TextView
-            android:text="@string/loading"
-            android:layout_margin="5dp"
-            android:maxWidth="300dp"
-            android:layout_gravity="center"
-            android:id="@+id/loadStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+        layout="@layout/loading_lay"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
