--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.activity.MainActivity"
-    android:background="@color/colorBackground">
+    tools:context=".view.activity.MainActivity">
 
     <LinearLayout
         android:orientation="vertical"
